# taken

./: .env.example  .gitignore  CLAUDE.md  PLAN.md  README.md  alembic.ini  pyproject.toml  requirements.txt  vercel.json
.github/workflows/: ci.yml
alembic/: env.py
alembic/versions/: e74ad56848cd_initial_phase1_tables.py
api/: index.py
app/: application.py  config.py  dependencies.py  main.py
app/db/: engine.py  models.py
app/middleware/: auth.py
app/routers/: auth.py  games.py  games_sync.py  matches.py  matches_sync.py  seasons.py
app/schemas/: auth.py  game.py  match.py  season.py
app/services/: foys.py  team_mapping.py  teams.py  timeslot.py
tests/: conftest.py  test_auth.py  test_seasons.py  test_sync.py
